[package]
name = "EOF-Parser"
version = "0.1.0"
edition = "2021"
authors = ["malik <aremumalik05@gmail.com>"]
description = "EOF Parser is a Rust library for parsing Ethereum Object Format (EOF) files"
license = "MIT"

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0.61"

[lib]
doctest = true

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"